Creación de los dtos y controladores para los endpoints de los listados de municipios, provincias, comunidades autonomas, combustibles y estaciones de servicio. Se realiza el cambio de nombrado para seguir el convenio con mayúsculas y minúsculas. También se añade un sistema de respuesta dinámico y un handler de respuestas de api en caso de errores.